--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" placeholder="Enter Password" required>
         </div>
-        <button type="submit">Login</button>
+        <button id="login" type="submit">Login</button>
     </form>
     <p id="message"></p>
 
